src/app/components/home/home.component.scss
@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

.container {
  min-height: 100vh;
  background: url(../../../assets/pokeball.jpg);
  -webkit-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;

  .title {
    color: white;
    margin:0;
    padding:50px 20px;
  }

  .center {
    display: flex;
    justify-content: center;
  }

  .content {
    display: flex;
    flex-wrap: wrap;

    .pokemon-container {
      display: flex;
      flex-wrap: wrap;
      justify-content: center;

      .pokemon {
        flex: 0 1 calc(33.3%);
        transition: transform 0.8s;
        transform-style: preserve-3d;

        &:hover {
          opacity: 0.5;
        }

        &.flip {
          opacity: 1;

          .stats {
            max-height: 100px;
            overflow-y: scroll;

            .stat {
              padding: 5px 0;
            }

            .name {
              text-transform: uppercase;
              font-weight: bold;
            }
          }
        }
      }
    }
  }
}

